{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 63,
  "lineage": "0c8c6e4e-ba7d-d05c-3d96-a851468fcce2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097b09f356b811a94",
            "arn": "arn:aws:ec2:us-east-1:045861053872:elastic-ip/eipalloc-097b09f356b811a94",
            "domain": "vpc",
            "id": "eipalloc-097b09f356b811a94",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-73-136.compute-1.amazonaws.com",
            "public_ip": "3.227.73.136",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-nat"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-nat",
              "Project": "hero-api"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "eipalloc-097b09f356b811a94",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:internet-gateway/igw-0dd97337281de7ae0",
            "id": "igw-0dd97337281de7ae0",
            "owner_id": "045861053872",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment",
              "Project": "hero-api"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "igw-0dd97337281de7ae0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:loadbalancer/app/hero-api-assessment/679611862ccc9cf3",
            "arn_suffix": "app/hero-api-assessment/679611862ccc9cf3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hero-api-assessment-565607527.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:045861053872:loadbalancer/app/hero-api-assessment/679611862ccc9cf3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hero-api-assessment",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ae9fa365c6d61c4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00884a95b8b22b5ca"
              },
              {
                "subnet_id": "subnet-09b37806cb8a9fb1b"
              }
            ],
            "subnets": [
              "subnet-00884a95b8b22b5ca",
              "subnet-09b37806cb8a9fb1b"
            ],
            "tags": {
              "Name": "hero-api-assessment"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment",
              "Project": "hero-api"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:loadbalancer/app/hero-api-assessment/679611862ccc9cf3"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:listener/app/hero-api-assessment/679611862ccc9cf3/009aae061862dcbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:targetgroup/hero-f2652fa8690611995bf2539bc3/8bbd00d4e3ab904d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:045861053872:listener/app/hero-api-assessment/679611862ccc9cf3/009aae061862dcbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:loadbalancer/app/hero-api-assessment/679611862ccc9cf3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:listener/app/hero-api-assessment/679611862ccc9cf3/009aae061862dcbb"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:targetgroup/hero-f2652fa8690611995bf2539bc3/8bbd00d4e3ab904d",
            "arn_suffix": "targetgroup/hero-f2652fa8690611995bf2539bc3/8bbd00d4e3ab904d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:045861053872:targetgroup/hero-f2652fa8690611995bf2539bc3/8bbd00d4e3ab904d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hero-f2652fa8690611995bf2539bc3",
            "name_prefix": "hero-",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hero-api-assessment"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment",
              "Project": "hero-api"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:045861053872:targetgroup/hero-f2652fa8690611995bf2539bc3/8bbd00d4e3ab904d"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097b09f356b811a94",
            "association_id": "eipassoc-00dff447bc67f2a03",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e127982b58dac142",
            "network_interface_id": "eni-054b72be8a03e48dc",
            "private_ip": "10.20.15.104",
            "public_ip": "3.227.73.136",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00884a95b8b22b5ca",
            "tags": {
              "Name": "hero-api-assessment-nat"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-nat",
              "Project": "hero-api"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "nat-0e127982b58dac142",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0daf14d0e3396e53f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e127982b58dac142",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0daf14d0e3396e53f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0daf14d0e3396e53f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e32c8c99a7bf90281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e127982b58dac142",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e32c8c99a7bf9028",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e32c8c99a7bf9028"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dd97337281de7ae0",
            "id": "r-rtb-0c557eaecd611ab891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0c557eaecd611ab89",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0c557eaecd611ab89"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:route-table/rtb-0164ca6daf78f73ad",
            "id": "rtb-0164ca6daf78f73ad",
            "owner_id": "045861053872",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hero-api-assessment-db"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-db",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtb-0164ca6daf78f73ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:route-table/rtb-0daf14d0e3396e53f",
            "id": "rtb-0daf14d0e3396e53f",
            "owner_id": "045861053872",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hero-api-assessment-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-private-us-east-1a",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtb-0daf14d0e3396e53f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:route-table/rtb-0e32c8c99a7bf9028",
            "id": "rtb-0e32c8c99a7bf9028",
            "owner_id": "045861053872",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hero-api-assessment-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-private-us-east-1b",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtb-0e32c8c99a7bf9028",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:route-table/rtb-0c557eaecd611ab89",
            "id": "rtb-0c557eaecd611ab89",
            "owner_id": "045861053872",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hero-api-assessment-public"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-public",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtb-0c557eaecd611ab89",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0371d3e19dba70929",
            "region": "us-east-1",
            "route_table_id": "rtb-0164ca6daf78f73ad",
            "subnet_id": "subnet-061f24717febf5d48"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-0371d3e19dba70929",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fbdaa42fd3e9d66",
            "region": "us-east-1",
            "route_table_id": "rtb-0164ca6daf78f73ad",
            "subnet_id": "subnet-09f9090afbbdd7f14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-08fbdaa42fd3e9d66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098117ee0367bc93a",
            "region": "us-east-1",
            "route_table_id": "rtb-0daf14d0e3396e53f",
            "subnet_id": "subnet-03f824aeccc840089"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-098117ee0367bc93a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01150706526841012",
            "region": "us-east-1",
            "route_table_id": "rtb-0e32c8c99a7bf9028",
            "subnet_id": "subnet-06469db1ef1c2cbb8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-01150706526841012",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fcf28363e81a504",
            "region": "us-east-1",
            "route_table_id": "rtb-0c557eaecd611ab89",
            "subnet_id": "subnet-00884a95b8b22b5ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-02fcf28363e81a504",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f99410a5c8d55a56",
            "region": "us-east-1",
            "route_table_id": "rtb-0c557eaecd611ab89",
            "subnet_id": "subnet-09b37806cb8a9fb1b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "rtbassoc-0f99410a5c8d55a56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group/sg-0ae9fa365c6d61c4c",
            "description": "Public entry point",
            "egress": [],
            "id": "sg-0ae9fa365c6d61c4c",
            "ingress": [],
            "name": "hero-api-assessment-alb",
            "name_prefix": "",
            "owner_id": "045861053872",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hero-api-assessment-alb"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-alb",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sg-0ae9fa365c6d61c4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group/sg-0b7f1ce87b88c945e",
            "description": "PostgreSQL",
            "egress": [],
            "id": "sg-0b7f1ce87b88c945e",
            "ingress": [],
            "name": "hero-api-assessment-database",
            "name_prefix": "",
            "owner_id": "045861053872",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hero-api-assessment-database"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-database",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sg-0b7f1ce87b88c945e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group/sg-07aeb40e277fb5842",
            "description": "Application tasks",
            "egress": [],
            "id": "sg-07aeb40e277fb5842",
            "ingress": [],
            "name": "hero-api-assessment-tasks",
            "name_prefix": "",
            "owner_id": "045861053872",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hero-api-assessment-tasks"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-tasks",
              "Project": "hero-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sg-07aeb40e277fb5842",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-061f24717febf5d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061f24717febf5d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-db-us-east-1a",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-db-us-east-1a",
              "Project": "hero-api",
              "Tier": "database"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-061f24717febf5d48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-09f9090afbbdd7f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f9090afbbdd7f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-db-us-east-1b",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-db-us-east-1b",
              "Project": "hero-api",
              "Tier": "database"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-09f9090afbbdd7f14",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-03f824aeccc840089",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f824aeccc840089",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-private-us-east-1a",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-private-us-east-1a",
              "Project": "hero-api",
              "Tier": "application"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-03f824aeccc840089",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-06469db1ef1c2cbb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06469db1ef1c2cbb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-private-us-east-1b",
              "Tier": "application"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-private-us-east-1b",
              "Project": "hero-api",
              "Tier": "application"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-06469db1ef1c2cbb8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-00884a95b8b22b5ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00884a95b8b22b5ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-public-us-east-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-public-us-east-1a",
              "Project": "hero-api",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-00884a95b8b22b5ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:subnet/subnet-09b37806cb8a9fb1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b37806cb8a9fb1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045861053872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment-public-us-east-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-public-us-east-1b",
              "Project": "hero-api",
              "Tier": "public"
            },
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "subnet-09b37806cb8a9fb1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:vpc/vpc-0a6889ccb253bd07d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-04de5afbf480b59fd",
            "default_route_table_id": "rtb-0a073658f2725b24c",
            "default_security_group_id": "sg-057d22f535f77f81b",
            "dhcp_options_id": "dopt-0e0e40113ded6c7f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6889ccb253bd07d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a073658f2725b24c",
            "owner_id": "045861053872",
            "region": "us-east-1",
            "tags": {
              "Name": "hero-api-assessment"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment",
              "Project": "hero-api"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "vpc-0a6889ccb253bd07d",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:vpc-endpoint/vpce-0e02d1c7bc85be9f8",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e02d1c7bc85be9f8",
            "ip_address_type": "ipv4",
            "owner_id": "045861053872",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0daf14d0e3396e53f",
              "rtb-0e32c8c99a7bf9028"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "hero-api-assessment-s3"
            },
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Name": "hero-api-assessment-s3",
              "Project": "hero-api"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a6889ccb253bd07d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "vpce-0e02d1c7bc85be9f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group-rule/sgr-02d93776a5eb8c9e7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Forward to application tasks only",
            "from_port": 8000,
            "id": "sgr-02d93776a5eb8c9e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07aeb40e277fb5842",
            "region": "us-east-1",
            "security_group_id": "sg-0ae9fa365c6d61c4c",
            "security_group_rule_id": "sgr-02d93776a5eb8c9e7",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sgr-02d93776a5eb8c9e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "tasks_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group-rule/sgr-0fc44eff2d12864e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Outbound to AWS APIs via NAT",
            "from_port": null,
            "id": "sgr-0fc44eff2d12864e7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07aeb40e277fb5842",
            "security_group_rule_id": "sgr-0fc44eff2d12864e7",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sgr-0fc44eff2d12864e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group-rule/sgr-000156ca0bd504d7f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from the internet",
            "from_port": 80,
            "id": "sgr-000156ca0bd504d7f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ae9fa365c6d61c4c",
            "security_group_rule_id": "sgr-000156ca0bd504d7f",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sgr-000156ca0bd504d7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "database_from_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group-rule/sgr-0d07fe785771c0a1a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL from application tasks only",
            "from_port": 5432,
            "id": "sgr-0d07fe785771c0a1a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07aeb40e277fb5842",
            "region": "us-east-1",
            "security_group_id": "sg-0b7f1ce87b88c945e",
            "security_group_rule_id": "sgr-0d07fe785771c0a1a",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sgr-0d07fe785771c0a1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.database",
            "aws_security_group.tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "tasks_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:045861053872:security-group-rule/sgr-0f9cd080c91603ae9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Application port, from the load balancer only",
            "from_port": 8000,
            "id": "sgr-0f9cd080c91603ae9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ae9fa365c6d61c4c",
            "region": "us-east-1",
            "security_group_id": "sg-07aeb40e277fb5842",
            "security_group_rule_id": "sgr-0f9cd080c91603ae9",
            "tags": null,
            "tags_all": {
              "Environment": "assessment",
              "ManagedBy": "terraform",
              "Project": "hero-api"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "045861053872",
            "id": "sgr-0f9cd080c91603ae9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.tasks",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}